# ct-logger-timer

./: CMakeLists.txt  README.txt  TimeMeasurements.ipynb
data/: codegen.py  out.cpp  out.h
include/: first.cpp  first.h  loggertimer.cpp  loggertimer.h  out.cpp  second.cpp  second.h
src/: CMakeLists.txt  main.cpp
